<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/coordinator_layout_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_main_body"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:background="@drawable/cityscape_masked"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_activity_greeting_message"
                    android:textColor="@color/black"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_activity_login_to_your_account" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <Button
                    android:id="@+id/sign_in_with_google_button"
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_blue"
                    android:clickable="true"
                    android:drawableLeft="@drawable/google_icon"
                    android:elevation="5dp"
                    android:focusable="true"
                    android:text="@string/sign_in_with_google"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:cornerRadius="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <View
                    android:layout_width="130dp"
                    android:layout_height="1dp"
                    android:background="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" or " />

                <View
                    android:layout_width="130dp"
                    android:layout_height="1dp"
                    android:background="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_email_address_input"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <EditText
                    android:id="@+id/user_email_address"
                    android:layout_width="339dp"
                    android:layout_height="70dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edit_text_shape"
                    android:hint="Email Address"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_email_address_input"
                app:layout_constraintVertical_bias="0.695">

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="339dp"
                    android:layout_height="70dp"
                    android:autofillHints="password"
                    android:background="@drawable/edit_text_shape"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login_button"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange"
                    android:elevation="5dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:cornerRadius="100dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_activity_login_no_have_account" />

                <TextView
                    android:id="@+id/tv_sign_up_no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sign_up"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="-10dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_anchor="@+id/scrollView3"
        app:layout_anchorGravity="bottom|center" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>