...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_activity_greeting_message"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
...
